--- a/app/views/layouts/dashboard.html.erb
+++ b/app/views/layouts/dashboard.html.erb
@@ -99,7 +99,7 @@
           </div>
 
       </div>
-      <div class="mid-wraper-bttm"><img src="images/mid-bttm.jpg" alt=""></div>
+      <div class="mid-wraper-bttm"><img src="mid-bttm.jpg" alt=""></div>
     </div>
     <div class="footer">
       <div class="footer-side">
@@ -113,7 +113,7 @@
       <!--DO NOT Remove The Footer Links-->
       <!--Designed by-->
       <a target="_blank" href="http://www.htmltemplates.net">
-      <img src="images/design.gif" class="copyright" alt="htmltemplates.net"></a>
+      <img src="design.gif" class="copyright" alt="htmltemplates.net"></a>
       <div class="footer-right">&copy; Copyright 2014. Designed by <a target="_blank" href="http://www.htmltemplates.net">htmltemplates.net</a>
       <!--DO NOT Remove The Footer Links-->
 
